tests/testcases/valid/types/10_incomplete_pointer_parameter.ciel
// Test: Pointer to incomplete type as function parameter
// Expected: No error - pointers to incomplete types are allowed

struct ForwardDeclaredStruct;

void process(struct ForwardDeclaredStruct* param);
