tests/testcases/invalid/semantic/54_incomplete_function_return_decl.ciel
// Test: Incomplete type used as function return type (declaration)
// Expected: Error - incomplete type cannot be used as function return type

struct ForwardDeclaredStruct;

struct ForwardDeclaredStruct getObject();
